--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -8,3 +8,7 @@ border-1px($color)
         width 100%
         border-top 1px solid $color
         content ''
+bg-image($url)
+    background-image url($url + '@2x.png')
+    @media (-webkit-min-device-pixel-ratio: 3), (-webkit-device-pixel-ratio: 3)
+        background-image url($url + '@3x.png')
